--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <center>
     <section id="ABOUT">
     <h1>PROFILE </h1>
-  <img src="/mypic.jpeg" alt="Profile Picture" class="profile-picture">
+  <img src="mypic.jpeg" alt="Profile Picture" class="profile-picture">
   <p class="profile-description">Hi I'm Jaazeniah C. Mirano a BSIT student at CPSU.Nice to meet you.</p>
   </section>
 <style>
@@ -56,13 +56,13 @@
   <center>
     <div class="image-container">
       <div class="image-frame">
-        <img src="/pink.jpeg" alt="Mirano" width="200">
+        <img src="pink.jpeg" alt="Mirano" width="200">
         <figcaption>June 6, 2025</figcaption>
       </div>
     </div>
     <div class="image-container">
       <div class="image-frame">
-        <img src="/me.jpg" alt="Mirano" width="200">
+        <img src="me.jpg" alt="Mirano" width="200">
         <figcaption>
            June 4, 2023</figcaption>
       </div>
@@ -70,7 +70,7 @@
     </div>
     <div class="image-container">
       <div class="image-frame">
-        <img src="/uniform.jpg" alt="Mirano" width="200">
+        <img src="uniform.jpg" alt="Mirano" width="200">
         <figcaption>February 3,2025</figcaption>
       </div>
     </div>
