--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
    
   <h1>"MY VIDEO TUTORIAL"</h1>
   
-<iframe width="200" height="200" src="/Weverse.mp4"
+<iframe width="200" height="200" src="Weverse.mp4"
 frameborder="5" allowfullscreen></iframe>
 
-<iframe width="200" height="200" src="/video.mp4"
+<iframe width="200" height="200" src="video.mp4"
 frameborder="5" allowfullscreen></iframe>
 
-   <iframe width="200" height="200" src="/jl.mp4"
+   <iframe width="200" height="200" src="jl.mp4"
 frameborder="5" allowfullscreen></iframe>
   <br></br>
  </section>
